--- a/resume.tex
+++ b/resume.tex
@@ -175,7 +175,7 @@ Software Engineer with 4+ years of experience specializing in backend developmen
       {Summer Research Fellow}{May 2019 -- July 2019}
       {IIT Ropar}{Ropar, Punjab}
       \resumeItemListStart
-        \resumeItem{Developed a GUI for CNC toolpath generation in the SPIF process using MATLAB App Designer, reducing toolpath generation time by {{XX}}\%.}
+        \resumeItem{Developed a GUI for complex CNC toolpath generation for the SPIF process using MATLAB App Designer, reducing toolpath generation time and improving user experience.}
       \resumeItemListEnd
     \vspace{2pt}
   \resumeSubHeadingListEnd
